K8S/react/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  type: NodePort
  selector:
    app: react-todo
  ports:
  - port: 80
    targetPort: 5173
    nodePort: 30173
